# learn

./: build.gradle  config.gradle  gradle.properties  release.keystore  settings.gradle
aoplib/: build.gradle
app/: build.gradle  proguard-rules.pro  robust.xml
autopatchbase/: build.gradle
common/: CMakeLists.txt  build.gradle
common/src/androidTest/java/com/some/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/cpp/: jni-util.cpp
common/src/main/java/com/some/common/: BindingViewHolder.java  JniUtil.java  RouteUrl.java  Utils.java
common/src/main/java/com/some/common/Log/: MyLogImp.java
common/src/main/java/com/some/common/arouter/: RouterUrl.java
common/src/main/java/com/some/common/arouter/service/: DegradeServiceImpl.java  JsonServiceImpl.java  PathReplaceServiceImpl.java
common/src/main/java/com/some/common/crash/: SampleUncaughtExceptionHandler.java
common/src/main/java/com/some/common/file/: SaveUtils.java
common/src/main/java/com/some/common/reporter/: SampleLoadReporter.java  SamplePatchListener.java  SamplePatchReporter.java  SampleTinkerReport.java
common/src/main/java/com/some/common/service/: SampleResultService.java
common/src/main/java/com/some/common/thread/: Consumer.java  FourThreadRunnable.java  FourThreadUtils.java
common/src/main/java/com/some/common/util/: ColorUtil.kt  FilePathUtils.kt  FormatTools.java  SampleApplicationContext.java  TinkerManager.java  Utils.java
common/src/main/res/values/: colors.xml
common/src/test/java/com/some/common/: ExampleUnitTest.java
(+341 files in other folders)
